# test-uv

./: pyproject.toml
my_package/: pyproject.toml
src/my_package/: __init__.py
