[project]
name = "my-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shamal", email = "shamalgithub@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cuecard-ml-graphrag-inference-engine @ git+ssh://git@github.com/CueCard-AI/cuecard-ml-graphrag-inference-engine.git",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cuecard-ml-graphrag-inference-engine = { git = "ssh://git@github.com/CueCard-AI/cuecard-ml-graphrag-inference-engine.git" }
